Fix Collapse of item cards

--- a/react/src/components/item-card/item-card.module.css
+++ b/react/src/components/item-card/item-card.module.css
@@ -13,6 +13,7 @@
   border-radius: 2rem;
   height: 12rem;
   background-color: var(--grey-95);
+  z-index: 2;
 }
 
 .label {
@@ -32,4 +33,13 @@
 .details {
   margin-left: 0.4rem;
   color: var(--grey-40)
+}
+
+.unfocus {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  height: 100%;
 }
